tests/compile/iterator_invalidation.stderr
error[E0502]: cannot borrow `txn` as mutable because it is also borrowed as immutable
  --> tests/compile/iterator_invalidation.rs:15:15
   |
15 |     txn.query(|rows| {
   |     --- ----- ^^^^^^ mutable borrow occurs here
   |     |   |
   |     |   immutable borrow later used by call
   |     immutable borrow occurs here
...
19 |         txn.insert_ok(MyTable { name: "test" });
   |         --- second borrow occurs due to use of `txn` in closure
